add spock tests and update java version to 11